--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'org.greenrobot.greendao' // apply plugin
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -24,8 +24,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-}
 
+}
+greendao {
+    schemaVersion 1//数据库版本号
+    daoPackage 'com.zph.cvideo.data.db.dao'//设置DaoMaster、DaoSession、Dao包名
+    targetGenDir 'src/main/java'//设置DaoMaster、DaoSession、Dao目录
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -51,11 +56,22 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     provided 'javax.annotation:javax.annotation-api:1.2'
+    //rxcache
+    compile 'com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x'
+    //retrofit2
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+    compile 'me.jessyan:retrofit-url-manager:1.2.0'
+    compile 'de.greenrobot:java-common:2.3.1'
+    compile 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.0.1'
+    compile 'org.greenrobot:greendao:3.2.2'
     // To use Gson
     compile 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
     implementation project(':exolibrary')
     //permission
     compile 'com.yanzhenjie:permission:1.1.2'
     compile 'com.jaeger.statusbarutil:library:1.4.0'
-    implementation files('libs/HTPDA_6.0_Publish.jar')
 }
