--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     //permission
     compile 'com.yanzhenjie:permission:1.1.2'
     compile 'com.jaeger.statusbarutil:library:1.4.0'
+    //theme
+    compile 'com.qmuiteam:qmui:1.0.6'
 }
