--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     compile 'com.jaeger.statusbarutil:library:1.4.0'
     //theme
     compile 'com.qmuiteam:qmui:1.0.6'
+    implementation files('libs/HTPDA_6.0_Publish.jar')
+    implementation project(':camearlibrary')
 }
